# coolscan-mods

./: .gitignore  README.md
3dmodels/: Film Door - No Flap.step  Film Door - With Flap.step
3dmodels/With screw holes/: Base.3mf  Door.3mf  FilmDoor2.0.f3d  Inside tube.3mf
coolscan-updater/: .gitignore  CMakeLists.txt  README.md
coolscan-updater/src/: coolscan-memory-dump.c  coolscan-updater.c  coolscan_buffer.c  coolscan_buffer.h  coolscan_command.c  coolscan_command.h  coolscan_transport.h  coolscan_transport_winapi_usb.c  coolscan_updatefile.c  coolscan_updatefile.h
doc/: firmware.md  hardware.md  mod.md  protocol.md  sa-21-30.md  sf-200.md  update_ls_40.md  updates.md
dumps/: README.md
firmware/: patches.txt
hole/: LS-5000 Film Door Cutout.dxf
reflashers/: README.md
scripts/: apply_patch.py  create_fwupdate_file.py  release
